fix text alignment bug in buttons

--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -119,6 +119,10 @@ a {
     }
 }
 
+.ui.button.fluid.icon {
+  display: flex;
+}
+
 .ui.button:focus, .ui.button:hover, .ui.button + .button.inverted.basic.ui:focus, .ui.button + .button.inverted.basic.ui:hover {
   box-shadow: 0 0 0 .2rem white !important;
 }
